# fuel-route-optimizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_ARCHITECTURE.md  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: __init__.py  asgi.py  environment.py  settings.py  urls.py  views.py  wsgi.py
config/templates/config/: route_planner_demo.html
fuel/: admin.py  models.py
fuel/management/commands/: import_fuel_prices.py
fuel/migrations/: 0001_initial.py
fuel/services/: importer.py  stations.py
routing/: admin.py  apps.py  checks.py  configuration.py  exception_handler.py  exceptions.py  models.py  serializers.py  types.py  urls.py  views.py
routing/migrations/: 0001_initial.py
routing/services/: __init__.py  openrouteservice.py  optimizer.py  planning.py  routing.py
tests/: test_environment.py  test_fuel_import.py  test_optimizer.py  test_route_plan_api.py  test_routing.py  test_smoke.py
