[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel-route-optimizer"
version = "0.1.0"
description = "Django REST API for fuel-route planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.7",
    "djangorestframework>=3.16.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-django>=4.11.1,<5",
    "ruff>=0.12.4,<1",
]

[tool.setuptools.packages.find]
include = ["config*", "fuel*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
